# solana-coin-flip

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json  setup.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
security/: VULNERABILITY_REPORT.md
src/coinflip/: config.py  game.py  monitor.py  wallet.py  web.py
src/coinflip/templates/: index.html
