[project]
name = "solana-coin-flip"
version = "0.1.0"
description = "Provably fair coin flip game on Solana"
requires-python = ">=3.11"
dependencies = [
    "solders>=0.21.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "base58>=2.1.1",
    "rich>=13.0.0",
]

[project.scripts]
coinflip = "coinflip.monitor:main"
coinflip-new-wallet = "coinflip.wallet:generate_and_print"
coinflip-verify = "coinflip.game:verify_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coinflip"]
